--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "dev": "ts-node app.ts"
+    "dev": "ts-node app.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
     "@babel/preset-react": "^7.14.5",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
@@ -21,7 +23,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.2.3",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
